@@ -3189,7 +3189,7 @@ instRangeList<nodeRangep>:
 
 instRange<nodeRangep>:
                 '[' constExpr ']'
-                        { $$ = new AstRange{$1, new AstConst{$1, 0}, new AstSub{$1, $2, new AstConst{$1, 1}}}; }
+                        { $$ = new AstRange{$1, new AstConst{$1, 0}, new AstSub{$1, $2, new AstConst{$1, 1}}, true}; }
         |       '[' constExpr ':' constExpr ']'
                         { $$ = new AstRange{$1, $2, $4}; }
         ;
