@@ -1,8 +1,12 @@
+%Error: t/t_fuzz_eqne_bad.v:9:9: Size of range is '[0]', must be positive integer (IEEE 1800-2023 7.4.2)
+                               : ... note: In instance 't'
+    9 |    reg a[0];
+      |         ^
+        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
 %Error: t/t_fuzz_eqne_bad.v:12:19: Comparison requires matching data types
                                  : ... note: In instance 't'
                                  : ... Left-hand data type: 'logic$[0:-1]'
                                  : ... Right-hand data type: 'logic'
    12 |    initial c = (a != &b);
       |                   ^~
-        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
 %Error: Exiting due to
